--- a/src/scss/element/_btn.scss
+++ b/src/scss/element/_btn.scss
@@ -27,6 +27,7 @@
     background-color: var(--bc);
 
     &:hover {
+        color: var(--f) !important;
         background-color: var(--bc_c);
     }
 }
