--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,6 +1,20 @@
 header {
-    position: relative;
+    position: sticky;
+    top: 0;
     z-index: 10;
+    transition: all var(--ease) 0.6s;
+
+    &.scroll_down{
+        transform: translateY(-100%);
+    }
+}
+
+.up .scroll_down{
+    transform: translateY(0%);
+}
+
+.down .scroll_down{
+    pointer-events: none;
 }
 
 .header_top {
@@ -139,6 +153,7 @@ header {
             left: 0;
             right: 0;
             bottom: 0;
+            height: 100vh;
             padding: 0.4rem 0.15rem;
             display: flex;
             flex-direction: column;
@@ -174,7 +189,6 @@ header {
                 &::after {
                     opacity: 1;
                     visibility: visible;
-                    pointer-events: inherit;
                 }
             }
              
