--- a/src/scss/layout/_technology.scss
+++ b/src/scss/layout/_technology.scss
@@ -476,6 +476,7 @@
 
         @media screen and (max-width: 768px) {
             flex-direction: column;
+            align-items: flex-start;
             padding: 0.6rem 0;
         }
     }
