--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                             <div class="nav_children_right">
-                                <div>
+                                <div class="grid g-one">
                                     <ul>
                                         <li>
                                             <a href="#">
@@ -94,6 +94,16 @@
                                                 <p class="mt-20">Precision deep hole machining</p>
                                             </a>
                                         </li>
+                                        <li>
+                                            <a href="#">
+                                                <div class="nav_img radius-8 relative o-hidden">
+                                                    <img src="src/images/img-109.png" alt="nav">
+                                                </div>
+                                                <p class="mt-20">Precision deep hole machining</p>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <ul>
                                         <li>
                                             <a href="#">
                                                 <div class="nav_img radius-8 relative o-hidden">
