--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -38,7 +38,6 @@
 
 .a3 {
     display: grid;
-    height: 72vh;
     --asb: 1.8rem;
     color: var(--f);
     overflow: hidden;
@@ -188,7 +187,7 @@
         max-width: 5.6rem;
 
         @media screen and (max-width:768px) {
-            order: -2;
+            order: 2;
             margin: 0 auto 0.3rem;
         }
 
@@ -273,6 +272,10 @@
         overflow: visible;
         padding-top: 0.8rem;
         cursor: grab;
+
+        &.few-slides{
+            cursor: auto;
+        }
 
         @media screen and (max-width:768px) {
             padding-top: 0.4rem;
@@ -539,7 +542,7 @@
             align-items: flex-end;
 
             @media screen and (max-width:480px) {
-                height: 3.4rem;
+                height: 4.4rem;
             }
 
             .a4-5_img {
@@ -558,6 +561,10 @@
                 display: flex;
                 position: relative;
                 z-index: 3;
+
+                @media screen and (max-width:480px) {
+                    display: none;
+                }
             }
 
             .a4-5_jx {
@@ -577,6 +584,13 @@
                 clip-path: inset(0 100% 0 0);
                 transition: all var(--ease) 0.3s;
 
+                @media screen and (max-width:480px) {
+                    clip-path: inset(0 0 0 0);
+                    transform: translateX(0) translateY(0.3rem);
+                    gap: 0.26rem;
+                    padding: 0.24rem;
+                }
+
                 img {
                     width: 0.4rem;
                     height: auto;
@@ -587,6 +601,11 @@
                     justify-content: space-between;
                     align-items: flex-end;
                     gap: 0.1rem;
+
+                    @media screen and (max-width:480px) {
+                        align-items: flex-start;
+                        flex-direction: column;
+                    }
 
                     p:first-child {
                         line-height: 1.2;
