--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -31,7 +31,7 @@
             gap: 0.15rem;
 
             @media screen and (max-width: 768px) {
-                font-size: 0.15rem;
+                font-size: 14px;
                 grid-template-columns: 0.22rem 1fr;
                 margin-bottom: 0.1rem;
             }
