--- a/src/scss/layout/_faq.scss
+++ b/src/scss/layout/_faq.scss
@@ -75,11 +75,14 @@
             background: var(--f6);
             display: flex;
             flex-direction: column;
-            position: relative;
+            position: sticky;
             overflow: hidden;
+            top: 0.5rem;
+            transition: top var(--ease) 0.6s;
 
             >li {
                 padding: 0.16rem 0.4rem;
+                cursor: pointer;
 
                 &:first-child {
                     padding-top: 0.4rem;
@@ -174,4 +177,8 @@
             }
         }
     }
+}
+
+.up .f_left ul{
+    top: 1.5rem;
 }
