--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 header {
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 20;
     transition: all var(--ease) 0.6s;
 
     &.scroll_down{
@@ -54,6 +54,24 @@ header {
             width: 1.05rem;
         }
 
+        .mob_ico{
+            svg:first-child{
+                display: flex;
+            }
+            svg:last-child{
+                display: none;
+            }
+        }
+
+        .mob_ico.active{
+            svg:first-child{
+                display: none;
+            }
+            svg:last-child{
+                display: flex;
+            }
+        }
+
         .mob_ico svg {
             width: 0.26rem;
             height: 0.26rem;
@@ -92,7 +110,7 @@ header {
                 color: var(--1);
 
                 @media screen and (max-width:768px) {
-                    width: calc(100% - 0.6rem);
+                    width: 100%;
                     height: 100%;
                     display: flex;
                     justify-content: space-between;
@@ -106,8 +124,8 @@ header {
                     transition: all var(--ease) 0.3s;
 
                     @media screen and (max-width:768px) {
-                        padding: 0 0.1rem;
-                        font-size: 0.15rem;
+                        padding: 0;
+                        font-size: 14px;
                     }
 
                     &:hover {
@@ -133,7 +151,6 @@ header {
             position: relative;
 
             .nav_children_arrow {
-                margin-right: 0.2rem;
                 height: 100%;
                 width: 0.3rem;
                 display: flex;
@@ -214,7 +231,6 @@ header {
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
-        border-top: 0.01rem solid var(--d);
 
         a {
             background: var(--f);
@@ -284,6 +300,10 @@ header {
                         border-right: 0;
                         padding-top: 0.3rem;
                         padding-bottom: 0.3rem;
+
+                        .nav_children_more{
+                            display: none;
+                        }
                     }
 
                     .nav_children_tab {
@@ -293,6 +313,10 @@ header {
                             a {
                                 padding: 0.1rem 0;
                                 display: flex;
+
+                                @media screen and (max-width:768px) {
+                                    font-size: 12px;
+                                }
 
                                 &:hover {
                                     color: var(--bc);
@@ -312,10 +336,15 @@ header {
                                 transition: all var(--ease) 0.3s;
                             }
 
+                            &.cur,
                             &:hover {
                                 &::after {
                                     opacity: 1;
                                 }
+                            }
+
+                            &.cur a{
+                                color: var(--bc);
                             }
                         }
                     }
@@ -355,6 +384,11 @@ header {
                         gap: 0.4rem;
                         height: 4.8rem;
                         overflow-y: auto;
+                        display: none;
+
+                        &.cur{
+                            display: flex;
+                        }
 
                         @media screen and (max-width:768px) {
                             gap: 0.16rem;
@@ -383,6 +417,7 @@ header {
                                 @media screen and (max-width:768px) {
                                     width: 0.4rem;
                                     height: 0.4rem;
+                                    display: none;
                                 }
 
                                 img {
@@ -398,7 +433,7 @@ header {
 
 
                                 @media screen and (max-width:768px) {
-                                    font-size: 0.14rem;
+                                    font-size: 12px;
                                     height: auto;
                                     margin: 0;
                                 }
