--- a/src/scss/layout/_news.scss
+++ b/src/scss/layout/_news.scss
@@ -109,6 +109,10 @@
 
     .p_news_right {
         padding: 0.6rem 0.5rem;
+        height: fit-content;
+        position: sticky;
+        top: 0;
+        transition: top var(--ease) 0.6s;
 
         @media screen and (max-width: 768px) {
             padding: 0.6rem 0rem 0;
@@ -159,6 +163,10 @@
             }
         }
     }
+}
+
+.up .p_news_right{
+    top: 1rem;
 }
 
 .l_news_detail {
