--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,6 @@
 @use 'layout/layout';
 
 .homeBanner {
-    height: calc(100vh - 0.8rem - 0.36rem);
 
     .homeBanner_left {
         height: 100%;
@@ -128,7 +127,7 @@
 
     .index_banner {
         width: 100%;
-        height: 100%;
+        height: calc(100vh - .8rem - .36rem);
     }
 
     .index_banner_arr {
@@ -980,5 +979,16 @@
 }
 
 .no_data {
-    padding: 0.1rem 0;
+    padding: 1rem 0;
+}
+
+@media screen and (max-width:768px) {
+    .l_materials_list{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
 }
