--- a/src/scss/element/_bread.scss
+++ b/src/scss/element/_bread.scss
@@ -6,6 +6,14 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    width: calc(100vw - 0.3rem);
+    overflow-x: auto;
+    mask-image: linear-gradient(var(--mask-direction, to right), hsl(0 0% 0% / 0), hsl(0 0% 0% / 1) 0%, hsl(0 0% 0% / 1) 80%, hsl(0 0% 0% / 0));
+
+    &::-webkit-scrollbar {
+        width: 0px;
+        height: 0px;
+    }
 
     ul {
         display: flex;
@@ -18,6 +26,7 @@
             gap: 0.06rem;
             line-height: 1.4;
             color: var(--9);
+            width: max-content;
 
             @media screen and (max-width: 768px) {
                 font-size: 13px;
