--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -1,7 +1,7 @@
 @use '../common/tool' as *;
 
 .a2 {
-    height: 2.6rem;
+    height: auto;
 
     @media screen and (max-width:1024px) {
         height: auto;
@@ -601,6 +601,11 @@
                     justify-content: space-between;
                     align-items: flex-end;
                     gap: 0.1rem;
+
+                    @media screen and (max-width:1440px) {
+                        align-items: flex-start;
+                        flex-direction: column;
+                    }
 
                     @media screen and (max-width:480px) {
                         align-items: flex-start;
