--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -53,6 +53,10 @@ header {
         .logo img {
             width: 1.05rem;
         }
+    }
+
+    @media screen and (max-width:768px) {
+        padding: 0 0.15rem;
 
         .mob_ico{
             svg:first-child{
@@ -76,10 +80,6 @@ header {
             width: 0.26rem;
             height: 0.26rem;
         }
-    }
-
-    @media screen and (max-width:768px) {
-        padding: 0 0.15rem;
     }
 
     .nav {
@@ -115,7 +115,7 @@ header {
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
-                    padding: 0 0.2rem;
+                    padding: 0.2rem 0.2rem;
                 }
 
                 a {
@@ -145,7 +145,7 @@ header {
 
         @media screen and (max-width:768px) {
             width: 100%;
-            height: 0.6rem;
+            height: auto;
             justify-content: flex-start;
             flex-wrap: wrap;
             position: relative;
@@ -232,6 +232,20 @@ header {
         visibility: hidden;
         pointer-events: none;
 
+        @media screen and (max-width:768px) {
+            background: var(--f);
+            width: 94%;
+            margin: 0 auto;
+            text-align: left;
+
+            &.arrow_active {
+                opacity: 1;
+                visibility: visible;
+                pointer-events: auto;
+                position: static;
+            }
+        }
+
         a {
             background: var(--f);
             border-radius: 0.04rem;
@@ -301,8 +315,12 @@ header {
                         padding-top: 0.3rem;
                         padding-bottom: 0.3rem;
 
-                        .nav_children_more{
-                            display: none;
+                        // .nav_children_more{
+                        //     display: none;
+                        // }
+
+                        .nav_children_more a{
+                            padding: 0.1rem 0;
                         }
                     }
 
